derive-ex-tests/tests/compile_fail/derive_default/variant_value.rs
use derive_ex::derive_ex;

#[derive_ex(Default)]
enum X {
    #[default(10)]
    A,
}
fn main() {}
